Clear existing junk and start new

--- a/index.html
+++ b/index.html
@@ -2,15 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Testing playground</title>
+        <title>Awesome Website</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="flex-container">
-            <div class="one">one</div>
-            <div class="two">two</div>
-            <div class="three">three</div>
-            <div class="four">four</div>
-        </div>
     </body>
 </html>
