--- a/index.html
+++ b/index.html
@@ -6,5 +6,64 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div class="hero-background">
+            <div class="header">
+                <div class="logo">Header Logo</div>
+                <div class="header-links">
+                    <ul>
+                        <li><a href="#">header link one</a></li>
+                        <li><a href="#">header link two</a></li>
+                        <li><a href="#">header link three</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="hero">
+                <div class="intro-section">
+                    <h1>This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                    <button class="sign-up-button">Sign up</button>
+                </div>
+                <div class="img-placeholder">
+                    this is a placeholder for an image
+                </div>
+            </div>
+        </div>
+        <div class="random-info-section">
+            <h2>Some random information</h2>
+            <div class="cards">
+                <div class="card">
+                    <div class="card-img"></div>
+                    <div class="card-desc">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card">
+                    <div class="card-img"></div>
+                    <div class="card-desc">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card">
+                    <div class="card-img"></div>
+                    <div class="card-desc">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="card">
+                    <div class="card-img"></div>
+                    <div class="card-desc">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
+        </div>
+        <div class="quote-section">
+            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quote-author">-Thor, God of Thunder</div>
+        </div>
+        <div class="bottom-section">
+            <div class="sign-up-section">
+                <div>
+                    <h3>Call to action! It's time!</h3>
+                    <div>Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button>Sign up</button>
+            </div>
+        </div>
+        <div class="footer">
+            Copyright © The Odin Project
+        </div>
     </body>
 </html>
